src/objects/Trigger_Handler_Method__mdt.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_of_execution__c</fullName>
        <label>Order of execution</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trigger_Event_Type__c</fullName>
        <label>Trigger Event Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BEFORE_INSERT</fullName>
                    <default>true</default>
                    <label>Before insert</label>
                </value>
                <value>
                    <fullName>AFTER_INSERT</fullName>
                    <label>After insert</label>
                </value>
                <value>
                    <fullName>BEFORE_UPDATE</fullName>
                    <label>Before update</label>
                </value>
                <value>
                    <fullName>AFTER_UPDATE</fullName>
                    <label>After update</label>
                </value>
                <value>
                    <fullName>BEFORE_DELETE</fullName>
                    <label>Before delete</label>
                </value>
                <value>
                    <fullName>AFTER_DELETE</fullName>
                    <label>After delete</label>
                </value>
                <value>
                    <fullName>AFTER_UNDELETE</fullName>
                    <label>After undelete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger_Handler_Name__c</fullName>
        <label>Trigger Handler Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Trigger Handler Method</label>
    <pluralLabel>Trigger Handler Methods</pluralLabel>
    <validationRules>
        <fullName>Prevent_TestTriggerHandler_name</fullName>
        <active>true</active>
        <errorConditionFormula>Trigger_Handler_Name__c = &apos;TestTriggerHandler&apos;</errorConditionFormula>
        <errorDisplayField>Trigger_Handler_Name__c</errorDisplayField>
        <errorMessage>The name &quot;TestTriggerHandler&quot; is reserved for testing purposes!</errorMessage>
    </validationRules>
</CustomObject>